--- a/src/View/nav_home.html.twig
+++ b/src/View/nav_home.html.twig
@@ -14,19 +14,50 @@
                     Produit</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="#">Afficher les produits</a>
+                </div>
+            </li>
+            {% if app.session.get('logged') is defined and  app.session.get('logged') == 1  %}
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" id="dropdown0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Panier</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown0">
+                        <a class="dropdown-item" href="#">Afficher mon panier</a>
+
+                    </div>
+                </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Commande</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown02">
+                    <a class="dropdown-item" href="#">Afficher mes commandes</a>
 
                 </div>
             </li>
+            {% endif %}
+
+            {% if app.session.get('logged') is defined and  app.session.get('logged') == 1 and app.session.get('droit') == 'Droit_Vendeur' %}
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Mes produits</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown3">
+                        <a class="dropdown-item" href="#">Afficher mes produits</a>
+                        <a class="dropdown-item" href="">Gerer mes produits</a>
+                    </div>
+                </li>
+            {% endif %}
         </ul>
     </div>
+
     <ul class="nav justify-content-end navbar-nav mr-auto">
-        {% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
-            <li class="text-info" style="color: #1b1e21">Connecté en tant que : {{ app.session.get('username') }}</li>
+        {% if app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
+            <li class="text-info" style="color: #1b1e21">Connecté en tant que : {{ app.session.get('prenom_utilisateur') }} ,{{ app.session.get('nom_utilisateur') }} </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('compte.logout')  }}" >Se déconnecter </a>
+                <a class="nav-link" href="{{ path('user.logout')  }}" >Se déconnecter </a>
             </li>
         {% else %}
-            <li class="nav-item"><a class="nav-link" href="{{ path('compte.login')  }}">Se connecter</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ path('user.login')  }}">Se connecter</a></li>
         {% endif %}
     </ul>
 </nav>
