acceuil + manu + connection possible

--- a/src/View/accueil.html.twig
+++ b/src/View/accueil.html.twig
@@ -4,7 +4,7 @@
 	<main role="main" class="container">
 
 		<div class="starter-template">
-			<h1> Bienvenue sur Easy Deal </h1>
+			<h1> Bienvenue sur EasyDeals </h1>
 
 		</div>
 
