--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>exemple MVC php</title>
+    <title>EasyDeals</title>
     <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}" />
       <link rel="stylesheet" href="{{ asset('assets/css/starter-template.css') }}" />
 
