--- a/src/View/nav_home.html.twig
+++ b/src/View/nav_home.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar  navbar-expand-md navbar-dark fixed-top" style="background-color:#372F25;" >
-    <a class="navbar-brand" href="#">Easy Deal </a>
+    <a class="navbar-brand" href="#">EasyDeals </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,6 +26,7 @@
 
                     </div>
                 </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Commande</a>
@@ -47,6 +48,17 @@
                     </div>
                 </li>
             {% endif %}
+
+            {% if app.session.get('logged') is defined and  app.session.get('logged') == 1 and app.session.get('droit') == 'Droit_Admin' %}
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" id="dropdown4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         Utilisateurs</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown4">
+                        <a class="dropdown-item" href="">Gerer les utilisateurs</a>
+                    </div>
+                </li>
+            {% endif %}
         </ul>
     </div>
 
@@ -60,4 +72,5 @@
             <li class="nav-item"><a class="nav-link" href="{{ path('user.login')  }}">Se connecter</a></li>
         {% endif %}
     </ul>
+
 </nav>
