--- a/src/View/nav_home.html.twig
+++ b/src/View/nav_home.html.twig
@@ -13,7 +13,7 @@
                 <a class="nav-link dropdown-toggle" href="" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Produit</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Afficher les produits</a>
+                    <a class="dropdown-item" href="{{ path('produit.showProduitsC')  }}">Afficher les produits</a>
                 </div>
             </li>
             {% if app.session.get('logged') is defined and  app.session.get('logged') == 1  %}
@@ -43,7 +43,7 @@
                     <a class="nav-link dropdown-toggle" href="" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Mes produits</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown3">
-                        <a class="dropdown-item" href="#">Afficher mes produits</a>
+                        <a class="dropdown-item" href="">Afficher mes produits</a>
                         <a class="dropdown-item" href="">Gerer mes produits</a>
                     </div>
                 </li>
