--- a/src/View/Utilisateur/showProduitsClient.html.twig
+++ b/src/View/Utilisateur/showProduitsClient.html.twig
@@ -1,39 +1,40 @@
 {% extends "layout.html.twig" %}
 {% block contenu %}
-
-        <div class="container">
-            <div class="">
-        <h4>Produits disponibles</h4>
+<div class="android-content mdl-layout__content">
+<div class="android-more-section">
+    <div class="android-section-title mdl-typography--display-1-color-contrast">Produits disponible</div>
+    <div class="android-card-container mdl-grid">
     {% for produit in data if data is not empty %}
-           
-
-        <div class="col-lg-6">
-
-            <caption>{{produit.libelle_produits}}</caption>
-        <table class="table table-striped">
-
-        <tbody>
-
-            <tr>
-                 <td>{{ produit.libelle_typeProduits }}</td>
-                    <td>prix :{{ produit.prix_produits }}<br>
-                stock :{{ produit.stockProduit }}</td>
-
-                    <td>
-
-                        <a href="#">ajouter au panier</a> <br>
-                        <a href="{{path('produit.detail', {idProduit: produit.id_produits})}}"> détails sur le produit</a>
-                    </td>
-            </tr>
-
-            </tbody>
-            </table>
+        <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
+            <div class="mdl-card__media">
+                <img src="{{asset('images/Pizza_raclette.jpg')}}">
             </div>
+
+            <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">{{produit.libelle_produits}}</h4>
+            </div>
+
+            <div class="mdl-card__supporting-text">
+    <span class="mdl-typography--font-light mdl-typography--subhead">
+        prix du produits : {{ produit.prix_produits }} <br>
+        Nom de l'entreprise : nom de l'entreprise <br>
+        Adresse : adresse de l'entreprise
+        Vous pouvez récupérer votre produit entre 7h00 et 18h00
+    </span>
+            </div>
+            <div class="mdl-card__actions">
+                <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
+                    Réserver
+                    <i class="material-icons">chevron_right</i>
+                </a>
+            </div>
+        </div>
+
+
             
         {% endfor %}
-        </div >
 
-            </div>
-      
-
+    </div>
 {% endblock %}
+
+
