--- a/src/View/login.html.twig
+++ b/src/View/login.html.twig
@@ -1,33 +1,34 @@
 
 {% extends "layout.html.twig" %}
 {% block contenu %}
-    <form method="post" action="{{ path('user.validFormlogin') }}">
-            <div class="form-group">
-                <div class="col-md-3 mb-4">
-                    <label >Adresse Mail :</label>
-                    <input name="login"  type="text" value="" class="form-control"  placeholder="Login"  required>
-                </div>
+<div class="android-content mdl-layout__content" style="margin-left: auto; margin-right: auto; margin-top:10%; ">
+
+<form method="post" action="{{ path('user.validFormlogin') }}" style="background-color: #99CDD8;border-radius: 15px ">
+
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <label class="mdl-textfield__label" >Adresse Mail :</label>
+                    <input class="mdl-textfield__input" name="login"  type="email" value="" placeholder="Login"  required>
             </div>
-            <div class="form-group">
-                <div class="col-md-3 mb-4">
-                    <label>Password</label>
-                    <input name="password" type="text" class="form-control"  placeholder="Password" required>
-                </div>
+            <br>
+            <div  class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+
+                    <label  class="mdl-textfield__label" >Password</label>
+                    <input class="mdl-textfield__input" name="password" type="password" placeholder="Password" required>
             </div>
         {% if app.session.get('erreur') is not empty %}
-        <div class="form-group">
-            <div class="col-md-3 mb-4">
+         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <small>{{ app.session.get('erreur') }} </small>
-            </div>
+
         </div>
         {% endif %}
-        <div class="form-group">
-            <div class="col-md-3 mb-4">
-                <button name="seConnecter" class="btn btn-danger" type="submit">Se connecter</button>
-            </div>
-
-        </div>
-
+    <br>
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    <button class="mdl-button mdl-js-button mdl-button--raised mld-button--colored">
+        Se connecter
+    </button>
+    </div>
     </form>
 
 {% endblock %}
+
