coté client fini

--- a/src/View/Utilisateur/choixProfilClient.html.twig
+++ b/src/View/Utilisateur/choixProfilClient.html.twig
@@ -10,7 +10,7 @@
                         Allez sur la gestion du compte<i class="material-icons">chevron_right</i>
                     </a>
                     <br>
-                    <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="">
+                    <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="{{path('commande.mesCommandes')}}">
                         Allez sur la gestion des commandes <i class="material-icons">chevron_right</i>
                     </a>
                     <br>
